[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=1.0.0", "setuptools",]


[tool.poetry]
name = "lst_agents"
version = "0.1.0"
description = ""
authors = ["eightballer"]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
autonomy-dev = {extras = ["all"], version = ">=0.2.0,<=0.2.157"}

[tool.poetry.group.dev.dependencies]
responses = "^0.23.1"
mkdocs = "^1.6.0"
mkdocs-include-markdown-plugin = "^7.0.0"
mkdocs-mermaid2-plugin = "^1.1.1"
mkdocs-material = "^9.5.47"
mkdocs-material-extensions = "^1.3.1"
mkdocstrings = { extras = [ "python",], version = ">=0.25.2,<0.28.0" }
twine = "^5.1.1"
mkdocs-autorefs = "^1.0.1"


[tool.black]
line-length = 120
skip-string-normalization = true
target-version = [ "py37", "py38", "py39",]
include = "\\.pyi?$"
exclude = "/(\n    \\.eggs\n  | \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n  | _build\n  | buck-out\n  | build\n  | dist\n)/\n"
